--- a/src/index.css
+++ b/src/index.css
@@ -39,5 +39,5 @@ body{
 }
 .archivo-font{
         font-family: "Archivo Black", sans-serif;
-        font-weight: 900;
+        /* font-weight: 900; */
 }
